# Varadic_Loki

./: CMakeLists.txt  README.md
AbstractFactory/: AbstractFactory.h  CMakeLists.txt  FactoryUnit.h  main.cpp
AssocVector/: AssocVector.h  CMakeLists.txt  main.cpp
Factory/: CMakeLists.txt  CloneFactory.h  Factory.h  FactoryError.h  main.cpp
Functor/: BinderFirst.h  BinderFirst.hpp  BinderSecond.h  BinderSecond.hpp  CMakeLists.txt  Functor.h  Functor.hpp  FunctorChainer.cpp  FunctorChainer.h  FunctorHandler.h  FunctorHandler.hpp  FunctorImpl.cpp  FunctorImpl.h  MemFnHandler.cpp  MemFnHandler.h  main.cpp
Multimethods/: CMakeLists.txt  Casting.h  Dispatcher.h  main.cpp
Singleton/: CMakeLists.txt  Create.h  Lifetime.h  Longevity.h  Longevity.hpp  SingletonHolder.cpp  SingletonHolder.h  main.cpp
SmallObj/: CMakeLists.txt  FixedAllocator.h  FixedAllocator.hpp  SmallObjAllocator.cpp  SmallObjAllocator.h  SmallObject.h  SmallObject.hpp  main.cpp
SmartPtr/: CMakeLists.txt  Checking.h  Conversion.h  Ownership.h  SmartPtr.h  Storage.h  main.cpp
Test/: AbstractFactory.cpp  AssocVector.cpp  CMakeLists.txt  Factory.cpp  Functor.cpp  main.cpp
Threading/: CMakeLists.txt  Threading.h  main.cpp
TypeInfo/: CMakeLists.txt  TypeInfo.cpp  TypeInfo.h  main.cpp
TypeList/: CMakeLists.txt  HierarchyGenerator.h  TypeList.h  TypeManip.h  main.cpp
Visitor/: CMakeLists.txt  CatchAll.h  CyclicVisitor.h  Visitable.h  Visitor.h  main.cpp
